RESOLVED FIXED194205
Async overflow scroll with border-radius renders incorrectly
https://bugs.webkit.org/show_bug.cgi?id=194205
Summary Async overflow scroll with border-radius renders incorrectly
Simon Fraser (smfr)
Reported 2019-02-03 09:59:37 PST
Rendering is wrong with async overflow-scroll and border-radius. The radius is not clipping the scrolled content.
Attachments
Testcase (6.32 KB, text/html)
2019-02-03 09:59 PST, Simon Fraser (smfr)
no flags
Screenshot (328.26 KB, image/png)
2019-02-03 10:00 PST, Simon Fraser (smfr)
no flags
Patch (26.83 KB, patch)
2019-02-03 22:03 PST, Simon Fraser (smfr)
zalan: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews121 for ios-simulator-wk2 (2.44 MB, application/zip)
2019-02-04 00:03 PST, EWS Watchlist
no flags
Simon Fraser (smfr)
Comment 1 2019-02-03 09:59:52 PST
Created attachment 361018 [details] Testcase
Simon Fraser (smfr)
Comment 2 2019-02-03 10:00:16 PST
Created attachment 361019 [details] Screenshot
Radar WebKit Bug Importer
Comment 3 2019-02-03 10:00:57 PST
Simon Fraser (smfr)
Comment 4 2019-02-03 22:03:46 PST
EWS Watchlist
Comment 5 2019-02-04 00:03:16 PST
Comment on attachment 361038 [details] Patch Attachment 361038 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/11021881 New failing tests: fast/scrolling/ios/textarea-scroll-touch.html fast/scrolling/ios/change-scrollability-on-content-resize.html fast/scrolling/ios/overflow-scrolling-ancestor-clip-size.html fast/scrolling/ios/overflow-scroll-touch.html fast/scrolling/ios/overflow-scrolling-ancestor-clip.html fast/scrolling/ios/reconcile-layer-position-recursive.html
EWS Watchlist
Comment 6 2019-02-04 00:03:17 PST
Created attachment 361044 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Simon Fraser (smfr)
Comment 7 2019-02-04 14:09:44 PST
Note You need to log in before you can comment on or make changes to this bug.